@@ -1,15 +1,13 @@
 buildscript {
-    repositories {
-        mavenCentral()
-        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-        maven { url "https://oss.sonatype.org/content/repositories/releases/" }
-        maven { url 'https://jitpack.io' }
-    }
-
     dependencies {
         classpath "com.github.Anuken.Mindustry:core:$mindustryVersion"
         classpath "com.squareup:javapoet:$javapoetVersion"
-        classpath "com.github.Anuken:jabel:$jabelVersion"
+        classpath "com.github.bsideup.jabel:jabel-javac-plugin:$jabelVersion"
+    }
+
+    repositories {
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 
@@ -22,18 +20,16 @@ allprojects {
     version = '0.1'
 
     ext {
-        sdkVersion = { return '30' }
-        sdkAPI = { return '14' }
-        sdkRoot = { return System.getenv('ANDROID_SDK_ROOT') }
-        hasSprites = { return new File(rootDir, 'main/assets/sprites/').exists() }
-        windows = { return System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows') }
-        devBuild = { return project.hasProperty('dev') && Boolean.parseBoolean(project.property('dev') as String) }
+        sdkVersion = '30'
+        sdkAPI = '14'
+        sdkRoot = System.getenv('ANDROID_SDK_ROOT')
+        hasSprites = new File(rootDir, 'main/assets/sprites/').exists()
+        windows = System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')
+        devBuild = project.hasProperty('dev') && Boolean.parseBoolean(project.property('dev') as String)
     }
 
     repositories {
         mavenCentral()
-        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-        maven { url "https://oss.sonatype.org/content/repositories/releases/" }
         maven { url "https://jitpack.io" }
     }
 
@@ -52,28 +48,6 @@ allprojects {
         archives assetsJar
     }
 
-    tasks.withType(JavaCompile) {
-        options.compilerArgs += '-Xlint:deprecation'
-    }
-
-    tasks.withType(JavaExec) {
-        jvmArgs += "--enable-preview"
-    }
-}
-
-configure(project(':annotations')) {
-    sourceCompatibility = 8
-    targetCompatibility = 8
-
-    tasks.withType(JavaCompile) {
-        targetCompatibility = 8
-        sourceCompatibility = 8
-
-        options.incremental = true
-    }
-}
-
-configure(subprojects - project(':annotations')) {
     java {
         withJavadocJar()
         withSourcesJar()
@@ -87,29 +61,61 @@ configure(subprojects - project(':annotations')) {
         }
     }
 
-    sourceCompatibility = 15
-    targetCompatibility = 8
-
     tasks.withType(JavaCompile) {
-        sourceCompatibility = 15
-        targetCompatibility = 8
-
-        options.incremental = true
-        options.encoding 'UTF-8'
-        if(JavaVersion.current() != JavaVersion.VERSION_1_8) {
-            options.compilerArgs.addAll(['--release', '8', '--enable-preview'])
-        }
-
-        doFirst {
-            options.compilerArgs = options.compilerArgs.findAll { it != '--enable-preview' }
-        }
+        options.fork = true
+        options.forkOptions.jvmArgs += [
+            '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+            '--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED'
+        ]
     }
 
     tasks.withType(Javadoc) {
         options {
             addStringOption('Xdoclint:none', '-quiet')
-            addBooleanOption('-enable-preview', true)
-            addStringOption('-release', '15')
+            addStringOption('-release', '16')
         }
+    }
+}
+
+configure(project(':annotations')) {
+    sourceCompatibility = 8
+    targetCompatibility = 8
+
+    tasks.withType(JavaCompile) {
+        sourceCompatibility = 8
+        targetCompatibility = 8
+    }
+}
+
+configure(subprojects - project(':annotations')) {
+    sourceCompatibility = 16
+    targetCompatibility = 8
+
+    tasks.withType(JavaCompile) {
+        sourceCompatibility = 16
+        targetCompatibility = 8
+
+        options.incremental = true
+        options.encoding = 'UTF-8'
+
+        options.compilerArgs += '-Xlint:deprecation'
+        if(JavaVersion.current() != JavaVersion.VERSION_1_8) {
+            options.compilerArgs += ['--release', '8']
+        }
+    }
+
+    dependencies {
+        annotationProcessor "com.github.bsideup.jabel:jabel-javac-plugin:$jabelVersion"
+    }
+
+    repositories {
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
